# ros2-ur5-manipulation-simulation

./: README.md  package.xml  setup.py
Task2/hri_tasks/: teleoperation.launch.py
hri_tasks/: planar_arm.py
ros2_ur5_sim/ros2_ur5_sim/hri_tasks/: fsr_sensor.py  mapping_node.py  teleop_params.yaml
rviz/: ur5_hri_simulation_fixed.rviz
src/hri_manipulation/: setup.py
src/hri_manipulation/hri_manipulation/: lifting_service_node.py  planar_arm.py  ur5_joint_demo.py
task1/: force_to_torque_node.py
task3/: planar_arm.py
task3/task1/: ur5_joint_motion_node.py
task4_teleop/: fsr_sensor.py  mapping_node.py  teleoperation.py
videos/: ur5_joint_motion_demo.webm
