<?xml version="1.0"?>
<package format="3">
  <name>ros2_ur5_sim</name>
  <version>0.0.1</version>
  <description>ROS2 simulation package for manipulator and teleoperation tasks</description>

  <maintainer email="nilamathirp0199@gmail.com">Nilamathi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

